--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,15 @@
   <meta charset="utf-8">
   <title>Hello Mimi</title>
   <base href="/">
+  <meta name="Description" content="Personal Web Site">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Jura&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root>
+    <h1> Hello world I'm Mimi, thanks for visit my website</h1>
+  </app-root>
 </body>
 </html>
